# CameraInference

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AITask.cpp  AITask.h  CMakeLists.txt  EGLManager.cpp  EGLManager.h  PBOManager.cpp  PBOManager.h  Renderer.cpp  Renderer.h  native-lib.cpp
app/src/main/cpp/encoder/: IFrameEncoder.h  MockEncoder.cpp  MockEncoder.h
app/src/main/cpp/gpu/: EglCore.cpp  EglCore.h  GlShaderProgram.cpp  GlShaderProgram.h  GlTextureManager.cpp  GlTextureManager.h  YuvToRgbConverter.cpp  YuvToRgbConverter.h
app/src/main/cpp/inference/: IInferenceEngine.h  MockInferenceEngine.cpp  MockInferenceEngine.h
app/src/main/cpp/pipeline/: FramePacket.cpp  FramePacket.h  FrameQueue.cpp  FrameQueue.h  NativePipelineManager.cpp  NativePipelineManager.h  PipelineStats.h
app/src/main/java/com/example/airealtime/: MainActivity.kt
app/src/main/java/com/example/airealtime/app/: AiRealtimeApp.kt
app/src/main/java/com/example/airealtime/core/camera/: CameraSessionController.kt
app/src/main/java/com/example/airealtime/core/data/: SettingsRepository.kt
app/src/main/java/com/example/airealtime/core/media/: FileOutputManager.kt  (+2 more)
app/src/main/kotlin/com/example/camerapipe/: CameraManager.kt  JniBridge.kt  MainActivity.kt  VideoEncoder.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/airealtime/: NativeConfigTest.kt
doc/: README.md
(+11 files in other folders)
